<resources>
<!--    <string name="app_name">南安公务用图系统</string>-->
    <string name="app_name">四乱现场核查平台</string>
    <string name="project_name">jwgwyt</string>

    <string name="company_name">技术支持：福建省卫星数据开发有限公司</string>
    <string name="copyright">版权所有： 福建省卫星数据开发有限公司</string>
    <string name="net_error">网络异常</string>

    <string name="loading_text">欢迎进入公务用图项目，正在启动中...</string>

    <string name="analysis_farm">分析农房占用
        \n生态红线面积 </string>
    <string name="analysis_farm_overlay">分析农房叠加
        \n专题图面积 </string>
    <string name="please_input_preview_uri">请输入您需要播放的实时预览URL</string>
    <string name="please_input_playback_uri">请输入您需要播放的录像回放URL</string>
    <string name="real_preview">实时预览</string>
    <string name="playback">录像回放</string>
    <string name="title_activity_preview">实时预览</string>
    <string name="title_activity_playback">录像回放</string>
    <string name="capture">抓图</string>
    <string name="start_record">开始录像</string>
    <string name="close_record">关闭录像</string>
    <string name="sound_open">声音开</string>
    <string name="sound_close">声音关</string>
    <string name="pause">暂停</string>
    <string name="resume">恢复</string>
    <string name="stop_preview">停止预览</string>
    <string name="start_preview">开始预览</string>
    <string name="stop_playback">停止回放</string>
    <string name="start_playback">开始回放</string>

    <string name="please_input">请输入...</string>
    <string name="please_input_folder">请输入文件夹名称</string>
    <string name="folder_is_exisit">该文件夹已经存在</string>
    <string name="name_is_exisit">该名称已经存在</string>
    <string name="name_can_not_empty">名称不能为空</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>

    <string name="eidt_success">修改成功</string>
    <string name="eidt_failed">修改失败</string>

    <string name="collect_success">收藏成功</string>
    <string name="collect_failed">收藏失败</string>

    <string name="location_north">北纬</string>
    <string name="location_south">南纬</string>
    <string name="location_east">东经</string>
    <string name="location_west">西经</string>
    <string name="north">北</string>
    <string name="east_north">东北</string>
    <string name="east">东</string>
    <string name="east_south">东南</string>
    <string name="south">南</string>
    <string name="west_south">西南</string>
    <string name="west">西</string>
    <string name="west_north">西北</string>
    <string name="pressure">"气压 "</string>
    <string name="altitude">"海拔 "</string>

    <string name="ch_vertical_north">北</string>
    <string name="ch_vertical_east_north">东北</string>
    <string name="ch_vertical_east">东</string>
    <string name="ch_vertical_east_south">东南</string>
    <string name="ch_vertical_south">南</string>
    <string name="ch_vertical_west_south">西南</string>
    <string name="ch_vertical_west">西</string>
    <string name="ch_vertical_west_north">西北</string>

</resources>