<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".digtalcamera.PreVeiwActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        style="@style/layout_allmatch"
        android:layout_alignParentTop="true"
        android:background="@android:color/black">

        <TextureView
            android:id="@+id/textureView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

        <TextView
            android:id="@+id/playHintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        style="@style/layout_linear_vertical"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <LinearLayout style="@style/layout_linear_horizontal">

            <TextView
                android:id="@+id/tvStart"
                style="@style/btnMain"
                android:text="@string/start_preview" />

            <TextView
                android:id="@+id/tvStop"
                style="@style/btnMain"
                android:layout_marginLeft="@dimen/nSize10"
                android:text="@string/stop_preview" />

        </LinearLayout>


        <LinearLayout
            style="@style/layout_linear_horizontal"
            android:layout_marginBottom="@dimen/nSize10"
            android:layout_marginTop="@dimen/nSize10">

            <TextView
                android:id="@+id/tvCapture"
                style="@style/btnMain"
                android:text="@string/capture" />

            <TextView
                android:id="@+id/tvRecord"
                style="@style/btnMain"
                android:layout_marginLeft="@dimen/nSize10"
                android:text="@string/start_record" />

            <TextView
                android:id="@+id/tvSound"
                style="@style/btnMain"
                android:layout_marginLeft="@dimen/nSize10"
                android:text="@string/sound_open" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>


