<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lll"
    style="@style/layout_allmatch"
    android:background="@color/main_color">

    <ImageView
        android:id="@+id/imgLogo"
        style="@style/layout_allmatch"
        android:scaleType="fitXY"
        android:src="@mipmap/logo_start_fj_water2"
        android:visibility="visible"/>

    <TextView
        style="@style/txt_big_white"
        android:layout_centerInParent="true"
        android:text="@string/project_name"
        android:textSize="@dimen/t35sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvVersion"
        style="@style/txt_normal_white"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="@dimen/nSize10"
        android:text=""
        android:visibility="gone" />

    <LinearLayout
        style="@style/layout_linear_vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="@dimen/nSize20"
        android:visibility="gone">

        <TextView
            style="@style/txt_normal_white"
            android:text="@string/copyright"
            android:visibility="gone" />

        <TextView
            style="@style/txt_normal_white"
            android:layout_marginTop="@dimen/nSize5"
            android:text="@string/company_name" />


    </LinearLayout>

    <RelativeLayout
        style="@style/layout_allmatch"
        android:background="@color/main_color"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/txt_normal_white"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/nSize5"
            android:textSize="50sp" />
    </RelativeLayout>
</RelativeLayout>
